welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:2: error: value %% is not a member of Int
	if (a%10==b%%10 || a%10==c%%10 || b%10==c%%10) return true
                   ^